--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,29 @@
 body {
-  background-color: #ddbc95;
-  color: #626d71; }
+  background-color: #336b87;
+  color: #e4e4e4; }
+
+h1 {
+  font-weight: 900; }
+
+@media screen and (max-width: 768px) {
+  h2 {
+    text-align: center; } }
+
+.container {
+  margin-top: 1%; }
+
+#header {
+  background-color: #2a3132; }
+
+.streamers {
+  border-left: 5px solid #763626;
+  margin-top: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #28546a; }
+
+img {
+  width: auto;
+  max-height: 100%;
+  border: 3px solid #763626;
+  margin-top: 25px; }
