--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,27 +1,19 @@
 body {
-  background-color: #336b87;
-  color: #e4e4e4; }
+  background-color: #336b87; }
 
 h1 {
   font-weight: 900; }
 
-@media screen and (max-width: 768px) {
-  h2 {
-    text-align: center; } }
-
-.container {
-  margin-top: 1%; }
-
 #header {
   background-color: #2a3132; }
 
-.streamers {
-  border-left: 5px solid #763626;
-  margin-top: 5px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: #28546a; }
+.panel-heading > .row, .panel-body > .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
 
-img {
-  border: 3px solid #763626;
-  margin-top: 25px; }
+div.col-xs-8.col-sm-10.text-center p {
+  margin: 5px 0px 5px 0px; }
