--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,7 +2,20 @@ body {
   background-color: #336b87; }
 
 h1 {
-  font-weight: 900; }
+  background-color: #2a3132;
+  font-weight: 900;
+  color: #fff;
+  margin: 0px;
+  padding: 20px 0px 15px 20px; }
+
+a:hover {
+  text-decoration: none !important; }
+
+#fcc {
+  color: green; }
+
+#fcc:hover, #fcc:active {
+  color: lightgreen; }
 
 #header {
   background-color: #2a3132; }
