--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -10,7 +10,22 @@ body {
 }
 
 h1 {
+  background-color: $color3;
   font-weight: 900;
+  color: #fff;
+  margin: 0px;
+  padding: 20px 0px 15px 20px;
+}
+
+a:hover {
+  text-decoration: none !important;
+}
+
+#fcc {
+  color: green;
+}
+#fcc:hover, #fcc:active {
+  color: lightgreen;
 }
 
 #header {
