--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,14 +1,19 @@
 body {
-  background-color: #336b87; }
+  background-color: #ddd; }
 
 h1 {
   background-color: #2a3132;
   font-weight: 900;
-  color: #fff;
+  color: #ddd;
   margin: 0px;
-  padding: 20px 0px 15px 20px; }
+  padding: 20px 0px 15px 20px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  border: 1px solid transparent; }
 
-a:hover {
+.h3 {
+  font-weight: 700; }
+
+a:hover, a:active, a:focus {
   text-decoration: none !important; }
 
 #fcc {
@@ -20,6 +25,18 @@ a:hover {
 #header {
   background-color: #2a3132; }
 
+.panel-group .panel {
+  margin-top: 4px;
+  border: 0px;
+  border-left: 2px solid #2a3132;
+  border-radius: 0px; }
+
+.panel-heading {
+  border: 0px !important; }
+
+.panel-default > .panel-heading {
+  background-color: #13445c; }
+
 .panel-heading > .row, .panel-body > .row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -28,5 +45,23 @@ a:hover {
       -ms-flex-align: center;
           align-items: center; }
 
+.panel-default > .panel-heading + .panel-collapse > .panel-body {
+  border-top: 2px solid #2a3132;
+  background-color: #336b87;
+  color: #f5f5f5; }
+
 div.col-xs-8.col-sm-10.text-center p {
-  margin: 5px 0px 5px 0px; }
+  margin: 5px 0px 5px 0px;
+  color: #ddd; }
+
+.img-thumbnail {
+  padding: 0;
+  border: 5px solid #2a3132;
+  border-radius: 0px; }
+
+.glyphicon {
+  color: #2a3132;
+  font-size: 25px; }
+
+.glyphicon:hover {
+  color: #763626; }
