--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -90,8 +90,16 @@ p.online {
   color: green;
 }
 
-p.offline {
+p.online:hover {
+  color: lightgreen;
+}
+
+a.offline {
   color: indianred;
+}
+
+a.offline:hover {
+  color: red;
 }
 
 .loader {
